fixed z-index on scroll lists

--- a/styles.css
+++ b/styles.css
@@ -195,26 +195,6 @@ a {
 
 }
 
-/* ################# HORIZONTAL LIST OF IMAGES ################ */
-.myList {
-      display: flex;
-      flex-direction: row;
-      list-style-type: none;
-      justify-content: flex-start;
-      align-items: center;
-  }
-
-.myListItem {    
-    align-items: center;
-    flex: 0 1 auto; 
-    padding: 8px;
-    margin: 0px;
-    background-color: white;
-    border: 1px solid blue;
-    text-align: center;
-    height: 75px;
-}
-
 /* ################# HORIZONTAL LIST OF IMAGES SCROLLABLE ################ */
 .card {
     position: relative;
@@ -298,7 +278,6 @@ a {
     background-color: #fff;
     min-width: 100%;
     min-height: 75px;
-    z-index: 3;
   }
 
   .card--contentSmall {
